# SMT

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/malesko/smt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yin.cpp  yin.h
app/src/main/java/com/malesko/smt/: MainActivity.kt  SplashScreenActivity.kt
app/src/main/java/com/malesko/smt/audio/: NativeYin.kt  TunerEngine.kt  TunerState.kt
app/src/main/java/com/malesko/smt/reminder/: PracticeReminderReciever.kt  PracticeReminderScheduler.kt
app/src/main/java/com/malesko/smt/ui/settings/: SettingsFragment.kt
app/src/main/java/com/malesko/smt/ui/songs/: AddSongDialogFragment.kt  MySongsFragment.kt  OnlineSongsFragment.kt  SongAdapter.kt  (+3 more)
app/src/main/res/drawable/: bottom_bar_bg.xml  drawer_item_bg.xml  info_24.xml  musicplayer_24.xml  padlock_24.xml  tick_active_bad.xml  tick_active_good.xml  tick_inactive.xml
app/src/main/res/layout/: activity_main.xml  activity_splash_screen.xml  dialog_add_song.xml  fragment_my_songs.xml  fragment_online_songs.xml  fragment_settings.xml  fragment_songs.xml  fragment_songs_container.xml  fragment_tuner.xml  item_song.xml
app/src/main/res/menu/: bottom_nav.xml  menu_drawer.xml
app/src/main/res/navigation/: main_nav.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: dimens.xml  strings.xml  themes.xml
app/src/test/java/com/malesko/smt/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
